--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/5e245e1cea.js" crossorigin="anonymous"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <title>React App</title>
   </head>
   <body>
